# maps_3

./: .dockerignore  .gitignore  cityscapes_dataset.py  clipeseg_run.py  docker-compose.yml  image_mapper.Dockerfile  maps3_image_sender.Dockerfile  maps3_photo_processor.Dockerfile  train_clipseg.py
maps3-photo-processor/: setup.cfg  setup.py
other/: clipeseg_run.py  clipseg_inference.py  index.html  run_inference.py  train_clipseg.py
src/depth-image-plotting/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/maps3-image-mapper/: package.xml  setup.cfg  setup.py
src/maps3-image-mapper/maps3_image_mapper/: algo_mapper.py
src/maps3-image-mapper/src/maps3_image_mapper/: algo_mapper.py  service_run.py
src/maps3-image-sender/: Dockerfile  package.xml  setup.cfg  setup.py
src/maps3-image-sender/src/maps3_image_sender/: image_publisher.py  service_run.py
src/maps3-photo-processor/: Dockerfile  package.xml  setup.py
src/maps3-photo-processor/maps3_photo_processor/: clip_seg.py  photo_processing.py  service_run.py
src/maps3-photo-processor/src/maps3_photo_processor/: clip_seg.py  photo_processing.py
src/shared_interfaces/: CMakeLists.txt  Dockerfile  package.xml  setup.cfg  setup.py
src/shared_interfaces/msg/: SegmentationMask.msg
