<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>maps3-photo-processor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="eliadwork16@gmail.com">jellylapubuntu</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>shared_interfaces</depend>
  <depend>cv_bridge</depend>

  <!-- Third-party Python dependencies -->
  <exec_depend>torch</exec_depend>
  <exec_depend>transformers</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
